Added Board header and scoreboard

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,26 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-app.js"></script> -->
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#config-web-app -->
+
+    <!-- <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyClAP3Sn7Pql2Nhq7JOw14O15hLG3ZEkiU",
+        authDomain: "react-snek.firebaseapp.com",
+        databaseURL: "https://react-snek.firebaseio.com",
+        projectId: "react-snek",
+        storageBucket: "",
+        messagingSenderId: "466994661469",
+        appId: "1:466994661469:web:c704edfe7bda36df"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script> -->
   </body>
 </html>
